# kinneyotp

./: .gitignore  Makefile  example.py  otp.py  pyproject.toml  readme.txt  setup.cfg  setup.py
test/: test_key.py  test_otp.py
tests/: test_key.py  test_otp.py
