[project]
name = "kinneyotp"
version = "0.0.10"
authors = [
  { name="Mike Kinney", email="mike.kinney@gmail.com" },
]
description = "One Time Pad (aka Vernam Cipher) encoding and decoding."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"
